--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,12 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: linear-gradient(120deg, #155799, #159957); 
+}
+.page-header:link {
+  color: #fff;
+  text-decoration:none; 
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
