怎么就不成功呢尼玛

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <a href="/" ><h1 class="project-name">曾晋哲的Blog</h1></a>
+      <h1 class="project-name"><a class="nocolor" href="/" >曾晋哲的Blog</a></h1>
       <h2 class="project-tagline">了却君王天下事，赢得生前身后名</h2>
     </section>
 
