--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -59,10 +59,11 @@ a {
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); 
 }
-a.nocolor:link {
-  color: #fff;
-  text-decoration:none; 
-}
+
+a.nocolor:link {color: #fff;text-decoration:none;}
+a.nocolor:visited {color: #fff;text-decoration:none;}
+a.nocolor:hover {color: #fff;text-decoration:none;}
+a.nocolor:active {color: #fff;text-decoration:none;}
 
 @media screen and (min-width: 64em) {
   .page-header {
