--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,13 @@
       <h1 class="project-name"><a class="nocolor" href="/" >曾晋哲的Blog</a></h1>
       <h2 class="project-tagline">了却君王天下事，赢得生前身后名</h2>
     </section>
-
+	
     <section class="main-content">
 		<h3>{{ content }}</h3>
+		<!-- UY BEGIN -->
+		<div id="uyan_frame"></div>
+		<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2084450"></script>
+		<!-- UY END -->
 		<footer class="site-footer">
         <span class="site-footer-credits"><a href="/">本站</a>的全部文字由<a href="https://twitter.com/njzjz">曾晋哲</a>在<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh">CC BY-SA 4.0</a>之条款下提供，由<a href="https://pages.github.com">GitHub Pages</a>使用<a href="https://twitter.com/jasonlong">Jason Long</a>创作的<a href="https://github.com/jasonlong/cayman-theme">Cayman主题</a>生成。</span>
 		</footer>
