--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="zh-cn">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="baidu-site-verification" content="uhg5z0fKeg" />
     <title>{{ page.title }} -- 曾晋哲的Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
