--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="baidu-site-verification" content="uhg5z0fKeg" />
+	<meta name="google-site-verification" content="Axm_sRRGIMm0MsGGfOPRopzFyy7wRzAUyMohF1gXJV8" />
     <title>{{ page.title }} -- 曾晋哲的Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
