区分主页和普通也

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,20 +2,14 @@
 <html lang="zh-cn">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="baidu-site-verification" content="uhg5z0fKeg" />
+	<meta name="google-site-verification" content="Axm_sRRGIMm0MsGGfOPRopzFyy7wRzAUyMohF1gXJV8" />
     <title>{{ page.title }} -- 曾晋哲的Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
-	<script>
-(function(){
-    var bp = document.createElement('script');
-    bp.src = '//push.zhanzhang.baidu.com/push.js';
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(bp, s);
-})();
-</script>
   </head>
   <body>
     <section class="page-header">
@@ -26,10 +20,6 @@
     <section class="main-content">
 		<h3>{{ content }}</h3>
 		<footer class="site-footer">
-		<!-- UY BEGIN -->
-		<div id="uyan_frame"></div>
-		<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2084450"></script>
-		<!-- UY END -->
         <span class="site-footer-credits"><a href="/">本站</a>的全部文字由<a href="https://twitter.com/njzjz">曾晋哲</a>在<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh">CC BY-SA 4.0</a>之条款下提供，由<a href="https://pages.github.com">GitHub Pages</a>使用<a href="https://twitter.com/jasonlong">Jason Long</a>创作的<a href="https://github.com/jasonlong/cayman-theme">Cayman主题</a>生成。</span>
 		</footer>
     </section>
