--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,3 +5,4 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
 <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
+<script src="/js/googleanalytics.js"></script>
