--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     </section>
 	
     <section class="main-content">
-		<p><h2>{{ page.title }}</h2></p>
+		<h2><p>{{ page.title }}</p></h2>
 		<h3>{{ content }}</h3>
 		<footer class="site-footer">
 		{% if page.comments != false %}
