--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	
     <section class="main-content">
 		<h2>{{ page.title }}</h2>
-		<h3>{{ content }}</h3>
+		{{ content }}
 		<footer class="site-footer">
 		{% if page.comments != false %}
 		<!-- UY BEGIN -->
