--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <section class="main-content">
 		<h2>{{ page.title }}</h2>
 		{% if page.share != false %}
-		{% include share.html %}
+		<p>{% include share.html %}</p>
 		{% endif %}
 		{{ content }}
 		<footer class="site-footer">
