--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name"><a class="nocolor" href="/" >曾晋哲的Blog</a></h1>
-      <h2 class="project-tagline">教育公平，反对减招</h2>
+      <h2 class="project-tagline">爱在ECNU</h2>
     </section>
 	
     <section class="main-content">
