--- a/_layouts/ecnu.html
+++ b/_layouts/ecnu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
   <head>
-   {% include ecnu_head.html %}
+   {% include head_ecnu.html %}
   </head>
   <body>
     <section class="page-header">
