--- a/_layouts/ecnu.html
+++ b/_layouts/ecnu.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"><a class="nocolor" href="/ecnu/" >化院生存手册-</a></h1>
+      <h1 class="project-name"><a class="nocolor" href="/ecnu/" >化院生存手册</a></h1>
       <h2 class="project-tagline">Living in SCME at ECNU</h2>
     </section>
 	
