--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2084450"></script>
 		<!-- UY END -->
 		{% endif %}
-        <span class="site-footer-credits"><a href="/">本站</a>的全部文字由<a href="https://twitter.com/njzjz">曾晋哲</a>在<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh">CC BY-SA 4.0</a>之条款下提供，由<a href="https://pages.github.com">GitHub Pages</a>使用<a href="https://twitter.com/jasonlong">Jason Long</a>创作的<a href="https://github.com/jasonlong/cayman-theme">Cayman主题</a>生成。</span>
+        <a href="/index.html">站点导航</a>|<a href="https://github.com/njzjz">Github</a>
 		</footer>
     </section>
   </body>
