--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,1 +1,1 @@
-<script src="/js/qzone.js"></script><script src="http://qzonestyle.gtimg.cn/qzone/app/qzlike/qzopensl.js#jsdate=20111201" charset="utf-8"></script>
+<script src="/js/qzone.js"></script><script src="https://qzonestyle.gtimg.cn/qzone/app/qzlike/qzopensl.js#jsdate=20111201" charset="utf-8"></script>
