--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -7,6 +7,6 @@ article img:not([data-loaded$="true"]){
     filter: blur(5px);
 }
 
-article img[src$=""]:not([data-loaded$="true"]){
+article img:not([data-loaded$="true"]){
     padding-bottom: 0.618
 }
